force-app/main/default/objects/LM_Store__c/LM_Store__c.object-meta.xml
<CustomObject>
    <label>Loja</label>
    <nameField>
        <label>Nome da Loja</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lojas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>