force-app/main/default/objects/LM_Store__c/fields/Available_Services__c.field-meta.xml
<CustomField>
    <fullName>Available_Services__c</fullName>
    <label>Serviços Disponíveis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Available_Services</valueSetName>
    </valueSet>
</CustomField>