force-app/main/default/objects/LM_Store__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email da Loja</label>
    <type>Email</type>
</CustomField>