force-app/main/default/objects/LM_Store__c/fields/Emails_CD__c.field-meta.xml
<CustomField>
    <fullName>Emails_CD__c</fullName>
    <inlineHelpText>Emails de envio de CD. Separe os emails utilizando &quot; ; &quot;.</inlineHelpText>
    <label>Emails CD</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>