force-app/main/default/objects/LM_Store__c/fields/GDrive_Folder__c.field-meta.xml
<CustomField>
    <fullName>GDrive_Folder__c</fullName>
    <label>Pasta GDrive</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>