force-app/main/default/objects/LM_Store__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>