force-app/main/default/objects/LM_Store__c/fields/Promessa_a_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Promessa_a_Cliente__c</fullName>
    <label>Email Promessa a Cliente</label>
    <type>Email</type>
</CustomField>