force-app/main/default/objects/LM_Store__c/fields/RE_Partner__c.field-meta.xml
<CustomField>
    <fullName>RE_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parceiro RE</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lojas</relationshipLabel>
    <relationshipName>Lojas</relationshipName>
    <type>Lookup</type>
</CustomField>