force-app/main/default/objects/LM_Store__c/fields/Service_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Email__c</fullName>
    <label>Email Serviço</label>
    <type>Email</type>
</CustomField>