force-app/main/default/objects/LM_Store__c/fields/Store_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_API_Name__c</fullName>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>