force-app/main/default/objects/LM_Store__c/fields/Store_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Code__c</fullName>
    <label>Código da Loja</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>