force-app/main/default/objects/LM_Store__c/fields/Store_Code_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Code_Number__c</fullName>
    <formula>LEFT(Store_Code__c, FIND(&quot;-&quot;, Store_Code__c) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Loja Number Only</label>
    <type>Text</type>
</CustomField>