force-app/main/default/objects/LM_Store__c/fields/Supervisao_de_Caixa__c.field-meta.xml
<CustomField>
    <fullName>Supervisao_de_Caixa__c</fullName>
    <label>Email Supervisão de Caixa</label>
    <type>Email</type>
</CustomField>