force-app/main/default/objects/LM_Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Store_Code__c</columns>
    <columns>GDrive_Folder__c</columns>
    <columns>Store_API_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Service_Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Available_Services__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>